<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>btserial_reciever</name>
  <version>1.0.0</version>
  <description>This package contains a bluetooth serial reciever used to recieve messages from the RPGlove and send them to ROS2 to control Robocol's arm</description>
	<maintainer email="jc.gutierrezg@uniandes.edu.co">Juan Camilo Gutierrez</maintainer>
  <license>TODO: License declaration</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>statemachine</exec_depend>
  <exec_depend>time</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
